src/langerak_gkv/sass/components/_menu.scss
@import "../lib/colors";
@import "../lib/typography";
@import "../lib/responsive";

$menu-font-color: #ffffff !default;
$menu-space-inbetween: 1.5rem;

$menu-item-font-size: 1.4rem;

.menu {

  // Mobile / tablet only
  & &__icons {
    @include hide-on-laptop(flex);
    padding: 3px $menu-space-inbetween / 2;
    justify-content: flex-end;
    align-items: center;
  }

  & &__hamberder {
    display: block;
    padding: 0 0.25em;
    cursor: pointer;
  }

  & &__hamberder-row {
    display: block;
    width: 1rem;
    height: 3px;
    border-radius: 1px;
    background: $menu-font-color;
    margin: 3px 0;
  }

  & &__profile {
    display: block;
    width: 1.4rem;
    height: 1.4rem;
    margin: 0 0.5rem;
    background-color: $menu-font-color;
    mask-image: url('../img/profile-icon.svg');
  }

  & &__search {
    display: block;
    width: 1.1rem;
    height: 1.1rem;
    margin: 0;
    background-color: $menu-font-color;
    mask-image: url('../img/zoek.svg');
  }

  // Shared

  & &__layer {
    @include hide-on-mobile(flex);
    padding: 0 $menu-space-inbetween / 2;

    &--sub {
      background: lighten(#333, 10%);

      .menu__item {
        margin: 0;

        &:hover {
          text-decoration: underline;
          border-bottom-color: transparent;
        }
      }

      .menu__item-link {
        font-size: .75 * $menu-item-font-size;
        line-height: 1.625 * $menu-item-font-size;
      }
    }

    &#{&}--menu-opened {
      @include mobile-only {
        display: block;
        padding-top: 0.75rem;
      }
    }
  }

  &#{&}--opened &__layer {
    @include show-on-mobile(block);
  }

  & &__item {
    position: relative;
    display: block;
    padding: 0 $menu-space-inbetween / 2;
    margin: 0.75rem 0;
    border-bottom: solid 3px transparent;

    @include mobile-only {
      margin: 0.25rem 0;
    }

    @include laptop {
      &--leaf:hover {
        border-bottom-color: rgba($theme-green-yellow, 0.75);

        .menu__item-link {
          color: darken($menu-font-color, 10%);
        }
      }
    }

    &--active {
      border-bottom-color: rgba($theme-green-yellow, 0.25);
    }
  }

  & &__item-link {
    @include title;
    display: flex;
    justify-content: space-between;
    align-items: center;

    color: $menu-font-color;
    text-transform: uppercase;
    font-size: $menu-item-font-size;
    line-height: 1.5625 * $menu-item-font-size;
    text-decoration: none;

    .menu__nested-toggle {
      line-height: 1rem;
      padding: 1px 3px;

      @include laptop {
        display: none;
      }

      .material-icons {
        font-size: 2rem;
        color: darken($menu-font-color, 40%);
      }

      &--desktop {
        display: none;
        position: relative;
        left: $menu-space-inbetween / 2;

        @include laptop {
          display: inline;
        }
      }
    }
  }

  & &__nested-menu {
    padding-left: $menu-space-inbetween;
    // hide by default
    display: none;

    &--opened {
      display: block;

      @include laptop {
        position: absolute;
        top: 3rem;
        z-index: 10;
        background: #333;
        padding: 0 $menu-space-inbetween / 2 $menu-space-inbetween / 2;
        border-bottom-left-radius: 2px;
        border-bottom-right-radius: 2px;
        border: solid 1px darken(#333, 2%);
        border-top: none;
      }
    }
  }

  & &__nested-item {
    @include title;
    display: block;
    font-size: .75 * $menu-item-font-size;
    color: $menu-font-color;
    text-decoration: none;
    padding: .2rem 0;

    &:hover {
      text-decoration: underline;
    }
  }

  & &__child &__item {
    font-size: 1.1rem;
    line-height: 3rem;
    padding-left: 2rem;
  }
}

